# ScenRelationInference

./: .gitignore  CMakeLists.txt  README.md  configuru.hpp  geometry_feature.cpp  geometry_feature.h  main.cpp  parse_tool.h  template_object.cpp  template_object.h  test.h
data/: 0515.csv  05152.csv  0630.csv
include/: data_parse.hpp  geometry_feature.h  parse_tool.h  pose_data_parse.h  pose_fix.hpp  scene_inference.h  template_object.h
matlab/: feature_draw.m  json_parse.m  main.m  object_visualization.m  plane_draw.m  plane_visualization.m  scene_visualization.m  surf_draw.m  surf_visualization.m
models/: Banana.json  Bleach_cleanser.json  Bowl.json  Cracker_box.json  Extra_Large_clamp.json  Foam_brick.json  Gelatin_box.json  Large_clamp.json  Large_marker.json  Master_chef_can.json  Mug.json  Mustard_bottle.json  Pitcher_base.json  Potted_meat_can.json  Power_drill.json  Pudding_box.json  Scissors.json  Sugar_box.json  Table.json  Tomato_soup_can.json  Tuna_fish_can.json  Wood_block.json  object_label.json  object_register.json  template_box.json  test_box.json  test_surf.json
src/: create_ycb_template.cpp  geometry_feature.cpp  main.cpp  parse_tool.cpp  pose_data_parse.cpp  scene_inference.cpp  template_object.cpp
